--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="landscape-message" style="color: white;">
    <div>
-      <p>🔄 Mohon miringkan ponsel Anda (Landscape)<br>untuk pengalaman membaca yang lebih estetik.</p>
+      <p>🔄 Mohon miringkan ponsel Anda (Landscape)<br>untuk pengalaman membaca yang lebih baik.Terimakasih ˃ᴗ˂</p>
    </div>
 </div>
     <audio id="bgMusic" loop>
@@ -223,4 +223,5 @@
 </body>
 
 </html>
+
 
