--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
 </head>
 <body>
 <div id="landscape-message">
-    <div>
+    <div id="envelope-wrapper">
+        <div class="envelope-paper">
+            <p class="script-font">Teruntuk Petualang yang Mencari Rahasia...</p>
+            <div id="wax-seal-btn">
+                <img src="https://raw.githubusercontent.com/Lyferaa/Lyfera/main/wax-seal.png" alt="Cap Stempel">
+                <span>Tekan untuk Membuka</span>
+            </div>
+        </div>
+    </div>
+
+    <div id="instruction-text" style="display: none;">
         <p>
-            <span style="font-size: 2rem; display: block; margin-bottom: 15px;">🕯️</span>
+            🕯️<br>
             Tunggu sebentar, petualang...<br>
             Cerita ini tak muat jika hanya dilihat sebelah mata.<br><br>
-            Gunakan <b>posisi Landscape🔄</b> agar pena dan kertas ini<br>
-            bisa menyambutmu dengan sempurna.
+            Mohon <b>miringkan ponsel Anda</b> agar pena dan kertas ini bisa menyambutmu dengan sempurna.
         </p>
     </div>
 </div>
@@ -229,6 +238,7 @@
 </body>
 
 </html>
+
 
 
 
