--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 <div id="landscape-message">
+    <div class="scroll-instruction">
+    <div class="finger-icon"></div>
+    <p>Scroll di area ini</p>
+</div>
     <div id="envelope-wrapper">
         <div class="envelope-paper">
             <p class="script-font">Teruntuk Petualang yang Mencari Rahasia...</p>
@@ -238,6 +242,7 @@
 </body>
 
 </html>
+
 
 
 
